--- a/index.html
+++ b/index.html
@@ -2,122 +2,121 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Gem System v18.1</title>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>Gem System v18.2</title>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --solo-blue: #3d5afe; --solo-cyan: #00e5ff;
             --panel-bg: #0a0c12; --system-red: #ff3d3d;
-            --system-green: #00ff88; --recovery-gold: #ffcc00;
         }
+
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
 
         body, html {
-            margin: 0; padding: 0; width: 100%; height: 100%;
+            margin: 0; padding: 0; width: 100%; min-height: 100%;
             background: #000; font-family: 'Rajdhani', sans-serif; color: #fff;
-            overflow-x: hidden; display: flex; justify-content: center;
+            display: flex; justify-content: center; align-items: flex-start;
+            overflow-x: hidden;
         }
 
-        /* AJUSTEMENT TAILLE MOBILE */
-        #hud-window { 
-            width: 95%; /* S'adapte à la largeur du téléphone */
-            max-width: 440px; 
-            background: var(--panel-bg); 
-            border: 1px solid rgba(0, 229, 255, 0.2); 
-            border-radius: 20px; 
-            padding: 20px; 
-            margin-top: 20px;
+        .hud-wrapper {
+            width: 100%;
+            max-width: 440px;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .hud-card {
+            background: var(--panel-bg);
+            border: 1px solid rgba(0, 229, 255, 0.2);
+            border-radius: 15px;
+            padding: 20px;
             position: relative;
-            box-sizing: border-box;
         }
 
-        /* Widgets adaptatifs */
-        .bio-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin: 15px 0; }
-        .bio-card { background: rgba(255,255,255,0.03); padding: 10px; border-radius: 8px; }
-        .bio-input { background: transparent; border: none; color: #fff; width: 100%; font-size: 16px; outline: none; }
-        
-        #recovery-widget { 
-            position: absolute; top: 20px; right: 20px; 
-            width: 80px; text-align: center; border: 1px solid var(--recovery-gold); 
-            border-radius: 10px; padding: 5px; background: rgba(255, 204, 0, 0.1); 
+        .bio-grid { 
+            display: grid; 
+            grid-template-columns: repeat(2, 1fr); 
+            gap: 10px; 
+            margin-top: 15px;
         }
 
-        .quest-item { padding: 12px; background: rgba(255,255,255,0.02); border-radius: 8px; margin-bottom: 6px; font-size: 12px; display: flex; justify-content: space-between; }
-        .btn-modern { width: 100%; padding: 15px; background: var(--solo-blue); border: none; border-radius: 10px; color: #fff; font-weight: 700; cursor: pointer; }
+        .bio-box {
+            background: rgba(255,255,255,0.05);
+            padding: 10px;
+            border-radius: 8px;
+        }
 
-        .hidden { display: none !important; }
-        
-        /* Modal Système Responsive */
-        #system-modal { position: fixed; inset: 0; background: #000; z-index: 2000; overflow-y: auto; padding: 10px; }
-        .os-window { width: 100%; max-width: 1000px; background: #0a0c12; border-radius: 15px; display: flex; flex-direction: column; }
+        input {
+            background: transparent; border: none; color: #fff;
+            font-size: 18px; width: 100%; font-family: inherit; outline: none;
+        }
+
+        #recovery-timer {
+            position: absolute; top: 15px; right: 15px;
+            border: 1px solid #ffcc00; padding: 5px 10px;
+            border-radius: 8px; color: #ffcc00; font-weight: bold;
+            text-align: center; font-size: 14px; cursor: pointer;
+        }
+
+        .btn-action {
+            width: 100%; padding: 18px; background: var(--solo-blue);
+            color: white; border: none; border-radius: 12px;
+            font-weight: bold; letter-spacing: 2px; margin-top: 10px;
+        }
     </style>
 </head>
 <body>
 
-    <div id="main-dashboard">
-        <div id="hud-window">
-            <div id="recovery-widget" onclick="toggleRestTimer()">
-                <div style="font-size: 7px; color: var(--recovery-gold);">RECOVERY</div>
-                <div id="rec-val" style="font-size: 14px; font-weight: bold;">00:30</div>
-            </div>
+<div class="hud-wrapper">
+    <div class="hud-card">
+        <div id="recovery-timer" onclick="startTimer()">
+            <div style="font-size: 8px;">RECOVERY</div>
+            <div id="time">00:30</div>
+        </div>
 
-            <div style="display: flex; gap: 15px; align-items: center;">
-                <div style="width: 60px; height: 60px; border-radius: 50%; border: 2px solid var(--solo-cyan); overflow: hidden;">
-                    <img id="img-hud" src="https://via.placeholder.com/60" style="width:100%; height:100%; object-fit:cover;">
-                </div>
-                <div>
-                    <span style="font-size: 20px; font-weight: 900;">GEM</span><br>
-                    <span style="color:var(--system-red); font-size:10px;">RANG E</span>
-                </div>
+        <div style="display: flex; align-items: center; gap: 15px;">
+            <div style="width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--solo-cyan); background: #111;"></div>
+            <div>
+                <div style="font-size: 22px; font-weight: 700;">GEM</div>
+                <div style="font-size: 10px; color: var(--system-red);">RANG E</div>
             </div>
+        </div>
 
-            <div class="bio-grid">
-                <div class="bio-card"><span style="font-size:9px; color:var(--solo-blue);">ÂGE</span><input type="number" id="age" class="bio-input" value="33" onchange="saveData()"></div>
-                <div class="bio-card"><span style="font-size:9px; color:var(--solo-blue);">IMC</span><div id="imc" class="bio-input">--</div></div>
-                <div class="bio-card"><span style="font-size:9px; color:var(--solo-blue);">TAILLE</span><input type="number" id="height" class="bio-input" value="186" onchange="saveData()"></div>
-                <div class="bio-card"><span style="font-size:9px; color:var(--solo-blue);">POIDS</span><input type="number" id="weight" class="bio-input" value="80" onchange="saveData()"></div>
-            </div>
-
-            <div id="quest-container">
-                <div class="quest-item"><span>[ POMPES ]</span><span>0 / 50</span></div>
-                <div class="quest-item"><span>[ SQUATS ]</span><span>0 / 50</span></div>
-            </div>
-
-            <button class="btn-modern" style="margin-top:15px;" onclick="alert('Système Optimisé !')">INITIALISER</button>
+        <div class="bio-grid">
+            <div class="bio-box"><small style="color:var(--solo-blue)">ÂGE</small><input type="number" value="33"></div>
+            <div class="bio-box"><small style="color:var(--solo-blue)">POIDS</small><input type="number" value="80"></div>
+            <div class="bio-box"><small style="color:var(--solo-blue)">TAILLE</small><input type="number" value="186"></div>
+            <div class="bio-box"><small style="color:var(--solo-blue)">IMC</small><div id="imc-val">23.1</div></div>
         </div>
     </div>
 
-    <script>
-        // Logique simplifiée pour test de taille
-        function updateIMC() {
-            const w = document.getElementById('weight').value;
-            const h = document.getElementById('height').value;
-            if(h > 0) {
-                const imc = (w / ((h/100)**2)).toFixed(1);
-                document.getElementById('imc').innerText = imc;
-            }
-        }
-        document.querySelectorAll('input').forEach(i => i.addEventListener('input', updateIMC));
-        updateIMC();
+    <div class="hud-card">
+        <div style="font-size: 12px; margin-bottom: 10px; color: var(--solo-cyan);">QUÊTE QUOTIDIENNE</div>
+        <div style="font-size: 14px; color: #aaa;">• 50 POMPES<br>• 50 SQUATS</div>
+    </div>
 
-        let restInterval;
-        function toggleRestTimer() {
-            let display = document.getElementById('rec-val');
-            let timeLeft = 30;
-            clearInterval(restInterval);
-            restInterval = setInterval(() => {
-                timeLeft--;
-                display.innerText = `00:${timeLeft.toString().padStart(2, '0')}`;
-                if (timeLeft <= 0) {
-                    clearInterval(restInterval);
-                    display.innerText = "00:30";
-                    alert("REPOS TERMINÉ !");
-                }
-            }, 1000);
-        }
-    </script>
+    <button class="btn-action" onclick="alert('Système prêt !')">ACCEPTER</button>
+</div>
+
+<script>
+    function startTimer() {
+        let s = 30;
+        const el = document.getElementById('time');
+        const itv = setInterval(() => {
+            s--;
+            el.innerText = `00:${s < 10 ? '0'+s : s}`;
+            if(s <= 0) {
+                clearInterval(itv);
+                el.innerText = "00:30";
+                alert("REPOS TERMINÉ !");
+            }
+        }, 1000);
+    }
+</script>
 </body>
 </html>
