--- a/index.html
+++ b/index.html
@@ -4,76 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Gem System v18.4</title>
+    <title>Gem System v18.5</title>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
     <style>
-        :root {
-            --solo-blue: #3d5afe; --solo-cyan: #00e5ff;
-            --panel-bg: #0a0c12; --system-red: #ff3d3d;
-        }
+        :root { --solo-blue: #3d5afe; --solo-cyan: #00e5ff; --panel-bg: #0a0c12; --system-red: #ff3d3d; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body, html {
-            margin: 0; padding: 0; width: 100%; min-height: 100%;
-            background: #000; font-family: 'Rajdhani', sans-serif; color: #fff;
-            display: flex; justify-content: center; align-items: flex-start;
-            overflow-x: hidden;
-        }
+        body, html { margin: 0; padding: 0; width: 100%; min-height: 100%; background: #000; font-family: 'Rajdhani', sans-serif; color: #fff; display: flex; justify-content: center; align-items: flex-start; overflow-x: hidden; }
         .hidden { display: none !important; }
 
         /* LOGIN */
-        #login-overlay {
-            position: fixed; inset: 0; background: #000;
-            display: flex; flex-direction: column; align-items: center; justify-content: center;
-            z-index: 9999; padding: 20px;
-        }
-        .login-box {
-            width: 100%; max-width: 320px; text-align: center;
-            border: 1px solid var(--solo-cyan); padding: 30px; border-radius: 20px;
-            background: var(--panel-bg);
-        }
-        input.login-input {
-            width: 100%; padding: 15px; margin-bottom: 10px;
-            background: #111; border: 1px solid #333; color: #fff;
-            border-radius: 10px; text-align: center; font-family: inherit;
-        }
+        #login-overlay { position: fixed; inset: 0; background: #000; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 9999; padding: 20px; }
+        .login-box { width: 100%; max-width: 320px; text-align: center; border: 1px solid var(--solo-cyan); padding: 30px; border-radius: 20px; background: var(--panel-bg); }
+        .login-input { width: 100%; padding: 15px; margin-bottom: 10px; background: #111; border: 1px solid #333; color: #fff; border-radius: 10px; text-align: center; font-family: inherit; }
 
         /* HUD */
-        .hud-wrapper {
-            width: 100%; max-width: 440px; padding: 15px;
-            display: flex; flex-direction: column; gap: 12px;
-        }
-        .hud-card {
-            background: var(--panel-bg); border: 1px solid rgba(0, 229, 255, 0.2);
-            border-radius: 15px; padding: 18px; position: relative;
-        }
-        .logout-btn {
-            position: absolute; top: 15px; left: 15px;
-            background: none; border: 1px solid var(--system-red);
-            color: var(--system-red); width: 30px; height: 30px;
-            border-radius: 50%; font-size: 14px;
-        }
-        #recovery-timer {
-            position: absolute; top: 15px; right: 15px;
-            border: 1px solid #ffcc00; padding: 5px 10px;
-            border-radius: 8px; color: #ffcc00; font-weight: bold; font-size: 14px;
-        }
-        .bio-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 8px; margin-top: 20px; }
-        .bio-box { background: rgba(255,255,255,0.05); padding: 8px; border-radius: 8px; }
-        .bio-box input { background: transparent; border: none; color: #fff; font-size: 16px; width: 100%; outline: none; }
+        .hud-wrapper { width: 100%; max-width: 440px; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
+        .hud-card { background: var(--panel-bg); border: 1px solid rgba(0, 229, 255, 0.2); border-radius: 15px; padding: 18px; position: relative; }
         
-        .quest-list { font-size: 14px; color: #ddd; line-height: 1.8; }
-        .quest-item { display: flex; justify-content: space-between; border-bottom: 1px solid rgba(255,255,255,0.05); padding: 4px 0; }
+        .top-controls { position: absolute; top: 15px; right: 15px; display: flex; gap: 10px; align-items: center; }
+        .logout-btn { background: none; border: 1px solid var(--system-red); color: var(--system-red); width: 28px; height: 28px; border-radius: 50%; font-size: 12px; display: flex; align-items: center; justify-content: center; }
+        #recovery-timer { border: 1px solid #ffcc00; padding: 5px 10px; border-radius: 8px; color: #ffcc00; font-weight: bold; font-size: 13px; text-align: center; }
 
-        .btn-action {
-            width: 100%; padding: 16px; background: var(--solo-blue);
-            color: white; border: none; border-radius: 12px;
-            font-weight: bold; letter-spacing: 2px;
-        }
-        .btn-system {
-            width: 100%; padding: 12px; background: transparent;
-            color: var(--solo-cyan); border: 1px solid var(--solo-cyan);
-            border-radius: 12px; font-weight: bold; margin-top: 5px;
-        }
+        /* AVATAR SELECTOR */
+        .avatar-container { position: relative; width: 80px; height: 80px; margin: 10px auto; cursor: pointer; }
+        .avatar-display { width: 100%; height: 100%; border-radius: 50%; border: 2px solid var(--solo-cyan); overflow: hidden; background: #111; display: flex; align-items: center; justify-content: center; }
+        .avatar-display img { width: 100%; height: 100%; object-fit: cover; }
+        .plus-icon { position: absolute; bottom: 0; right: 0; background: var(--solo-cyan); color: #000; width: 20px; height: 20px; border-radius: 50%; font-size: 16px; font-weight: bold; display: flex; align-items: center; justify-content: center; }
+
+        .bio-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 8px; margin-top: 15px; }
+        .bio-box { background: rgba(255,255,255,0.05); padding: 8px; border-radius: 8px; }
+        .bio-box input { background: transparent; border: none; color: #fff; font-size: 16px; width: 100%; outline: none; text-align: center; }
+        
+        .quest-item { display: flex; justify-content: space-between; border-bottom: 1px solid rgba(255,255,255,0.05); padding: 5px 0; font-size: 14px; }
+        .btn-action { width: 100%; padding: 16px; background: var(--solo-blue); color: white; border: none; border-radius: 12px; font-weight: bold; letter-spacing: 2px; }
+        .btn-system { width: 100%; padding: 12px; background: transparent; color: var(--solo-cyan); border: 1px solid var(--solo-cyan); border-radius: 12px; font-weight: bold; margin-top: 5px; }
     </style>
 </head>
 <body>
@@ -89,25 +53,33 @@
 
 <div id="main-content" class="hud-wrapper hidden">
     <div class="hud-card">
-        <button class="logout-btn" onclick="location.reload()">⏻</button>
-        <div id="recovery-timer" onclick="startTimer()">
-            <div style="font-size: 8px;">RECOVERY</div>
-            <div id="time">00:30</div>
+        <div class="top-controls">
+            <div id="recovery-timer" onclick="startTimer()">
+                <div style="font-size: 7px;">RECOVERY</div>
+                <div id="time">00:30</div>
+            </div>
+            <button class="logout-btn" onclick="location.reload()">⏻</button>
         </div>
 
-        <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 10px;">
-            <div style="width: 60px; height: 60px; border-radius: 50%; border: 2px solid var(--solo-cyan); margin-bottom: 8px; background: #111;"></div>
-            <div style="text-align: center;">
-                <div style="font-size: 22px; font-weight: 700;">GEM</div>
-                <div style="font-size: 9px; color: var(--system-red); border: 1px solid var(--system-red); padding: 1px 8px; border-radius: 4px; display: inline-block;">RANG E</div>
+        <div class="avatar-container" onclick="document.getElementById('fileInput').click()">
+            <div class="avatar-display" id="avatarBox">
+                <img id="profileImg" src="" class="hidden">
+                <span id="placeholderTxt" style="font-size: 10px; color: #444;">PHOTO</span>
             </div>
+            <div class="plus-icon">+</div>
+            <input type="file" id="fileInput" class="hidden" accept="image/*" onchange="loadImg(event)">
+        </div>
+
+        <div style="text-align: center;">
+            <div style="font-size: 22px; font-weight: 700; letter-spacing: 2px;">GEM</div>
+            <div style="font-size: 9px; color: var(--system-red); border: 1px solid var(--system-red); padding: 1px 8px; border-radius: 4px; display: inline-block;">RANG E</div>
         </div>
 
         <div class="bio-grid">
             <div class="bio-box"><small style="color:var(--solo-blue)">ÂGE</small><input type="number" value="33"></div>
             <div class="bio-box"><small style="color:var(--solo-blue)">POIDS</small><input type="number" value="80"></div>
             <div class="bio-box"><small style="color:var(--solo-blue)">TAILLE</small><input type="number" value="186"></div>
-            <div class="bio-box"><small style="color:var(--solo-blue)">IMC</small><div id="imc-val">23.1</div></div>
+            <div class="bio-box"><small style="color:var(--solo-blue)">IMC</small><div id="imc-val" style="text-align:center; padding-top:2px;">23.1</div></div>
         </div>
     </div>
 
@@ -134,6 +106,14 @@
             document.getElementById('login-overlay').classList.add('hidden');
             document.getElementById('main-content').classList.remove('hidden');
         } else { alert("IDENTIFIANTS INCORRECTS"); }
+    }
+
+    function loadImg(event) {
+        const img = document.getElementById('profileImg');
+        const txt = document.getElementById('placeholderTxt');
+        img.src = URL.createObjectURL(event.target.files[0]);
+        img.classList.remove('hidden');
+        txt.classList.add('hidden');
     }
 
     function startTimer() {
