--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Gem System v18.3 - Restored</title>
+    <title>Gem System v18.4 - Inventory Restored</title>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -60,8 +60,11 @@
         .os-window { width: 100%; max-width: 900px; height: 85vh; background: #0a0c12; border: 1px solid #1a1d26; border-radius: 15px; display: flex; flex-direction: column; overflow: hidden; }
         .os-header { padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #1a1d26; }
         .os-body { display: flex; flex: 1; padding: 20px; overflow-y: auto; gap: 20px; }
-        .tab-btn { background: #1a1d26; color: #555; border: none; padding: 8px 15px; border-radius: 6px; cursor: pointer; font-family: 'Rajdhani'; font-weight: 700; }
+        .tab-btn { background: #1a1d26; color: #555; border: none; padding: 8px 15px; border-radius: 6px; cursor: pointer; font-family: 'Rajdhani'; font-weight: 700; margin-right: 5px; }
         .tab-btn.active { background: var(--solo-blue); color: #fff; }
+
+        .inv-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px; width: 100%; margin-top: 15px; }
+        .inv-slot { height: 60px; background: rgba(255, 255, 255, 0.02); border: 1px solid rgba(0, 229, 255, 0.1); border-radius: 8px; display: flex; align-items: center; justify-content: center; font-size: 10px; color: #444; text-transform: uppercase; }
     </style>
 </head>
 <body>
@@ -123,12 +126,21 @@
             <div class="os-header">
                 <div style="display:flex; gap:5px;">
                     <button id="btn-stats" class="tab-btn active" onclick="switchTab('stats')">STATS</button>
+                    <button id="btn-inv" class="tab-btn" onclick="switchTab('inv')">INV</button>
                 </div>
                 <button onclick="toggleSystem()" style="background:none; border:1px solid #333; color:#666; padding:5px 10px; border-radius:5px; font-size:10px;">RETOUR</button>
             </div>
             <div class="os-body">
                 <div id="stats-content" style="flex:1; display:flex; flex-direction:column; align-items:center;">
                     <div style="width:100%; height:250px;"><canvas id="radarChart"></canvas></div>
+                </div>
+                <div id="inv-content" class="hidden" style="flex:1;">
+                    <div style="height:150px; background:rgba(255,255,255,0.05); border:1px dashed #333; border-radius:10px; display:flex; align-items:center; justify-content:center; color:#555;">[ APERÇU ÉQUIPEMENT ]</div>
+                    <div class="inv-grid">
+                        <div class="inv-slot">Casque</div><div class="inv-slot">Armure</div>
+                        <div class="inv-slot">Gants</div><div class="inv-slot">Bottes</div>
+                        <div class="inv-slot">Arme</div><div class="inv-slot">Accessoire</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -169,6 +181,13 @@
                 document.getElementById('q'+i).innerHTML = `<span>${EX[i-1]}</span><span style="color:var(--solo-cyan);">EN COURS</span>`;
                 document.getElementById('q'+i).classList.add('active');
             }
+        }
+
+        function switchTab(t) {
+            document.getElementById('stats-content').className = (t==='stats'?'':'hidden');
+            document.getElementById('inv-content').className = (t==='inv'?'':'hidden');
+            document.getElementById('btn-stats').className = 'tab-btn'+(t==='stats'?' active':'');
+            document.getElementById('btn-inv').className = 'tab-btn'+(t==='inv'?' active':'');
         }
 
         function updateSystemStats() {
