--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         @keyframes alertFade { from { opacity: 0; transform: translate(-50%, -60%); } to { opacity: 1; transform: translate(-50%, -50%); } }
 
-        /* --- FENETRES ORIGINALES (NON MODIFIÉES) --- */
+        /* --- FENETRES ORIGINALES --- */
         .login-container { z-index: 1000; width: 100%; max-width: 440px; padding: 20px; transition: opacity 0.5s ease; }
         .login-card {
             background: rgba(13, 16, 23, 0.9); backdrop-filter: blur(25px);
@@ -47,22 +47,26 @@
         .remember-container { display: flex; align-items: center; gap: 10px; margin-bottom: 30px; cursor: pointer; color: var(--text-muted); font-size: 13px; }
         .btn-init { width: 100%; background: linear-gradient(135deg, #3b82f6, #8b5cf6); color: white; border: none; padding: 16px; border-radius: 14px; font-weight: 700; cursor: pointer; font-family: 'Orbitron'; transition: 0.3s; }
 
-        /* --- HUD : STRUCTURE NETTOYÉE --- */
+        /* --- HUD : STRUCTURE CORRIGÉE --- */
         #hud-container {
             width: 95vw; max-width: 375px; 
             height: 90vh; max-height: 812px;
             background: var(--panel-bg); border-radius: 40px;
             padding: 25px; position: relative; border: 1px solid rgba(255, 255, 255, 0.08);
             display: flex; flex-direction: column; 
-            overflow: hidden; /* Empêche le défilement de toute la fenêtre */
+            overflow: hidden; 
         }
 
-        /* Zone de défilement isolée */
+        /* Correction du bouton pour PC */
+        #btn-accept {
+            position: relative;
+            z-index: 999;
+            pointer-events: auto !important;
+            cursor: pointer;
+        }
+
         .hud-scroll-zone {
-            flex-grow: 1;
-            overflow-y: auto;
-            padding-right: 5px;
-            margin: 15px 0;
+            flex-grow: 1; overflow-y: auto; padding-right: 5px; margin: 15px 0;
             -webkit-overflow-scrolling: touch;
         }
 
@@ -84,9 +88,7 @@
         .mission-box { background: rgba(255, 255, 255, 0.02); border-left: 3px solid #1a1d26; padding: 15px; border-radius: 10px; margin-bottom: 10px; cursor: pointer; }
         .mission-box.active { border-left-color: var(--solo-cyan); background: rgba(0, 229, 255, 0.03); }
         .mission-box.completed { border-left-color: var(--system-green); opacity: 0.4; }
-        .mission-box.locked { opacity: 0.3; pointer-events: none; }
         .recovery-widget { border: 1.5px solid #333; padding: 5px; border-radius: 4px; text-align: center; min-width: 80px; }
-        .recovery-active { border-color: var(--recovery-gold) !important; color: var(--recovery-gold); }
         .xp-container { width: 100%; height: 4px; background: rgba(255,255,255,0.05); margin-top: 10px; border-radius: 2px; overflow: hidden; }
         #xp-fill-session { height: 100%; width: 0%; background: linear-gradient(90deg, var(--solo-blue), var(--solo-cyan)); transition: width 0.5s ease; }
 
@@ -204,7 +206,6 @@
     </div>
 
     <script>
-        // Logique JS originale conservée
         const KEY = "HUNTER_V1_STORAGE";
         const TIMER_KEY = "HUNTER_TIMER_END";
         const QUEST_KEY = "HUNTER_CURRENT_QUESTS";
@@ -285,11 +286,33 @@
                     localStorage.removeItem(TIMER_KEY);
                     localStorage.removeItem(QUEST_KEY);
                     document.getElementById('main-timer').innerText = "24:00:00";
+                    document.getElementById('btn-accept').classList.remove('hidden');
+                    initMissions(false);
                     return;
                 }
                 let h = Math.floor(remaining / 3600), m = Math.floor((remaining % 3600) / 60), s = remaining % 60;
                 document.getElementById('main-timer').innerText = `${h.toString().padStart(2,'0')}:${m.toString().padStart(2,'0')}:${s.toString().padStart(2,'0')}`;
             }, 1000);
+        }
+
+        /* --- CORRECTION LOGIQUE CHARGEMENT --- */
+        function load() {
+            const d = JSON.parse(localStorage.getItem(KEY));
+            if(d) {
+                currentLvl = d.lvl || 1;
+                completed = d.completed || 0;
+                document.getElementById('u-age').value = d.age || "";
+                document.getElementById('u-height').value = d.h || "";
+                document.getElementById('u-weight').value = d.w || "";
+                document.getElementById('u-sex').value = d.sex || "M";
+                if(d.avatar) document.getElementById('avatar-hud').src = d.avatar;
+            }
+            
+            const savedEnd = localStorage.getItem(TIMER_KEY);
+            const hasActiveTimer = savedEnd && (parseInt(savedEnd) > Date.now());
+            
+            initMissions(hasActiveTimer);
+            updateRankVisuals();
         }
 
         function checkExistingTimer() {
@@ -302,9 +325,16 @@
                     if(savedQuests) activeQuests = JSON.parse(savedQuests);
                     initMissions(true);
                     document.getElementById('btn-accept').classList.add('hidden');
+                } else {
+                    localStorage.removeItem(TIMER_KEY);
+                    localStorage.removeItem(QUEST_KEY);
+                    document.getElementById('btn-accept').classList.remove('hidden');
+                    initMissions(false);
+                    document.getElementById('main-timer').innerText = "24:00:00";
                 }
             }
         }
+        /* --- FIN CORRECTION --- */
 
         function updateRankVisuals() {
             const badge = document.getElementById('rank-badge-img');
@@ -321,21 +351,6 @@
             if(h > 0) document.getElementById('u-imc').innerText = (w / ((h/100)**2)).toFixed(1);
             const data = { lvl: currentLvl, age: document.getElementById('u-age').value, h: h, w: w, sex: document.getElementById('u-sex').value, avatar: document.getElementById('avatar-hud').src, completed: completed };
             localStorage.setItem(KEY, JSON.stringify(data));
-            updateRankVisuals();
-        }
-
-        function load() {
-            const d = JSON.parse(localStorage.getItem(KEY));
-            if(d) {
-                currentLvl = d.lvl || 1;
-                completed = d.completed || 0;
-                document.getElementById('u-age').value = d.age || "";
-                document.getElementById('u-height').value = d.h || "";
-                document.getElementById('u-weight').value = d.w || "";
-                document.getElementById('u-sex').value = d.sex || "M";
-                if(d.avatar) document.getElementById('avatar-hud').src = d.avatar;
-            }
-            initMissions(localStorage.getItem(TIMER_KEY) ? true : false);
             updateRankVisuals();
         }
 
