--- a/index.html
+++ b/index.html
@@ -211,7 +211,23 @@
         const EXERCISES_POOL = [
             { name: "Pompes", base: 10, unit: "Reps" }, { name: "Squats", base: 15, unit: "Reps" },
             { name: "Gainage", base: 30, unit: "s" }, { name: "Fentes", base: 10, unit: "Reps/j" },
-            { name: "Dips", base: 8, unit: "Reps" }, { name: "Mountain Climbers", base: 20, unit: "Reps" }
+            { name: "Dips", base: 8, unit: "Reps" }, { name: "Mountain Climbers", base: 20, unit: "Reps" },
+        
+{ name: "Tractions", base: 5, unit: "Reps" },
+{ name: "Burpees", base: 8, unit: "Reps" },
+{ name: "Course à pied", base: 1, unit: "km" },
+{ name: "Planche latérale", base: 20, unit: "s/coté" },
+{ name: "Crunchs", base: 20, unit: "Reps" },
+// Cardio
+{ name: "Jumping Jacks", base: 30, unit: "Reps" },
+{ name: "Sprint sur place", base: 30, unit: "s" },
+{ name: "Shadow Boxing", base: 60, unit: "s" },
+
+// Souplesse / Mobilité
+{ name: "Étirement Ischios", base: 45, unit: "s/jambe" },
+{ name: "Posture de l'Enfant", base: 60, unit: "s" },
+{ name: "Rotation des épaules", base: 20, unit: "Reps" },
+{ name: "Cobra (Lombaire)", base: 30, unit: "s" }
         ];
 
         function goToScan() {
